<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="35sp"
            app:fontFamily="@font/anton" />

        <TextView
            android:id="@+id/tvPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/connect" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect" />

        <TextView
            android:id="@+id/responseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_move"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/rock"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/rock"
                android:layout_margin="20dp"/>

            <ImageView
                android:id="@+id/paper"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/paper"
                android:layout_margin="20dp"/>

            <ImageView
                android:id="@+id/scissor"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/scissor"
                android:layout_margin="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/selectedChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="@font/anton"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>




    </LinearLayout>

</ScrollView>